# tmdybinding

./: 404.html  README.md  browserconfig.xml  changelog.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  site.webmanifest
.github/workflows/: actions.yml
about/: index.html
about/LICENSE/: index.html
about/changelog/: index.html
docs/: api.md  index.md
docs/documentation/: api.md  index.md  parameters.md
documentation/: index.html
documentation/api/: index.html
documentation/parameters/: index.html
search/: search_index.json
tests/: conftest.py  local.cfg  test_lattice.py
tests/baseline_data/lattice/: energies[all-lat4-sp].pbz  energies[all-lat4].pbz  energies[all-soc-eo-lat4-sp].pbz  energies[all-soc-eo-lat4].pbz  energies[all-soc-eo-sp].pbz  energies[all-soc-eo].pbz  energies[all-soc-lat4-sp].pbz  energies[all-soc-lat4].pbz  energies[all-soc-sp].pbz  energies[all-soc].pbz  energies[all-sp].pbz  energies[all].pbz  expected[hexagonal-all].pbz  expected[hexagonal-cappelluti].pbz  expected[hexagonal-dias-mos2].pbz  expected[hexagonal-dias-mose2].pbz  expected[hexagonal-dias-mote2].pbz  expected[hexagonal-dias-ws2].pbz  expected[hexagonal-dias-wse2].pbz  expected[hexagonal-fang-mos2].pbz  expected[hexagonal-fang-mose2].pbz  expected[hexagonal-fang-ws2].pbz  expected[hexagonal-fang-wse2].pbz  expected[hexagonal-jorissen].pbz  expected[hexagonal-liu2-mos2].pbz  expected[hexagonal-liu2-mose2].pbz  expected[hexagonal-liu2-mote2].pbz  expected[hexagonal-liu2-ws2].pbz  expected[hexagonal-liu2-wse2].pbz  expected[hexagonal-liu2-wte2].pbz  expected[hexagonal-liu2].pbz  expected[hexagonal-liu6-mos2].pbz  expected[hexagonal-liu6-mose2].pbz  expected[hexagonal-liu6-mote2].pbz  expected[hexagonal-liu6-ws2].pbz  expected[hexagonal-liu6-wse2].pbz  expected[hexagonal-liu6-wte2].pbz  expected[hexagonal-roldan].pbz  expected[hexagonal-rostami].pbz  expected[hexagonal-wu].pbz
tmdybinding/: __init__.py  group1_tmd_5band.py  parameters.py  sg_parameters.py  sk_parameters.py  tmd_abstract_lattice.py  tmd_hopping_matrices.py  tmd_lattice.py  tmd_matrices.py  tmd_nn123456_meoxeo.py  tmd_nn123_meoxeo.py  tmd_nn125_meoxeo.py  tmd_nn12_meoxeo.py  tmd_nn12_mexe.py  tmd_nn256_me.py  tmd_nn256_meo.py  tmd_nn2_me.py  tmd_strain.py
tmdybinding/parameters/: __init__.py  slater_koster.py  strain.py  symmetry_group.py
