[project]
name = "tmdybinding"
version = "0.0.1"
authors = [
    {name="Bert Jorissen", email="info@bertjorissen.be"}
]
description = "Tight-binding lattices for TMDs for the Pybinding-package, Documentation: http://bertjorissen.github.io/tmdybinding (c) 2022-2023"
readme = "README.md"
dependencies = [
    "numpy>=1.12",
    "pytest>=5.0",
    "pybinding>=0.9"
]
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Physics',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
keywords = [
    "pybinding",
    "tight-binding",
    "solid-state physics",
    "physics",
    "cmt",
    "quantum",
    "graphene",
    "TMD",
    "KPM",
    "CPGF"
]
[project.urls]
"repository" = "https://github.com/BertJorissen/tmdybinding"
"documentation" = "https://bertjorissen.github.io/tmdybinding"
"changelog" = "https://github.com/BertJorissen/tmdybinding/blob/master/changelog.md"

[tool.setuptools]
packages = ["tmdybinding"]
